--- a/EchoApplication/EchoApplication.csproj
+++ b/EchoApplication/EchoApplication.csproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <Configuration Condition=" '$(Configuration)' == '' ">Linux_Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.0</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
@@ -10,33 +10,59 @@
     <RootNamespace>EchoApplication</RootNamespace>
     <AssemblyName>EchoApplication</AssemblyName>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Linux_Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug</OutputPath>
+    <OutputPath>bin\Linux_Debug</OutputPath>
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <ConsolePause>false</ConsolePause>
     <CustomCommands>
       <CustomCommands>
-        <Command type="AfterBuild" command="cp ${TargetFile} ${SolutionDir}/Console/bin/${ProjectConfigName}/Applications" />
+        <Command type="AfterBuild" command="mkdir ${SolutionDir}/WSSDaemon/bin/${ProjectConfigName}/Applications -p" externalConsole="True" />
         <Command type="AfterBuild" command="cp ${TargetFile} ${SolutionDir}/WSSDaemon/bin/${ProjectConfigName}/Applications" />
+        <Command type="AfterBuild" command="mkdir ${SolutionDir}/Console/bin/${ProjectConfigName}/Applications -p" />
+        <Command type="AfterBuild" command="cp ${TargetFile} ${SolutionDir}/Console/bin/${ProjectConfigName}/Applications" />
       </CustomCommands>
     </CustomCommands>
+    <ConsolePause>false</ConsolePause>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Linux_Release|AnyCPU' ">
     <DebugType>none</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Release</OutputPath>
+    <OutputPath>bin\Linux_Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <ConsolePause>false</ConsolePause>
     <CustomCommands>
       <CustomCommands>
-        <Command type="AfterBuild" command="cp ${TargetFile} ${SolutionDir}/Console/bin/${ProjectConfigName}/Applications" />
+        <Command type="AfterBuild" command="mkdir ${SolutionDir}/WSSDaemon/bin/${ProjectConfigName}/Applications -p" externalConsole="True" />
         <Command type="AfterBuild" command="cp ${TargetFile} ${SolutionDir}/WSSDaemon/bin/${ProjectConfigName}/Applications" />
+        <Command type="AfterBuild" command="mkdir ${SolutionDir}/Console/bin/${ProjectConfigName}/Applications -p" />
+        <Command type="AfterBuild" command="cp ${TargetFile} ${SolutionDir}/Console/bin/${ProjectConfigName}/Applications" />
+      </CustomCommands>
+    </CustomCommands>
+    <ConsolePause>false</ConsolePause>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Windows_Debug|AnyCPU' ">
+    <Optimize>false</Optimize>
+    <OutputPath>bin\Windows_Debug</OutputPath>
+    <WarningLevel>4</WarningLevel>
+    <CustomCommands>
+      <CustomCommands>
+        <Command type="AfterBuild" command="&quot;${SolutionDir}\WindowsDeploy.bat&quot; &quot;${TargetFile}&quot; &quot;${SolutionDir}\WSSDaemon\bin\${ProjectConfigName}\Applications&quot;" externalConsole="True" />
+      </CustomCommands>
+    </CustomCommands>
+    <DebugSymbols>true</DebugSymbols>
+    <DefineConstants>DEBUG;</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Windows_Release|AnyCPU' ">
+    <Optimize>false</Optimize>
+    <OutputPath>bin\Windows_Release</OutputPath>
+    <WarningLevel>4</WarningLevel>
+    <CustomCommands>
+      <CustomCommands>
+        <Command type="AfterBuild" command="&quot;${SolutionDir}\WindowsDeploy.bat&quot; &quot;${TargetFile}&quot; &quot;${SolutionDir}\WSSDaemon\bin\${ProjectConfigName}\Applications&quot;" externalConsole="True" />
       </CustomCommands>
     </CustomCommands>
   </PropertyGroup>
