--- a/WebSocketServer/WebSocketServer.csproj
+++ b/WebSocketServer/WebSocketServer.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Drafts\Draft.cs" />
     <Compile Include="Drafts\Draft10.cs" />
     <Compile Include="Drafts\Draft17.cs" />
+    <Compile Include="SecureConnection.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
