--- a/WSSConsole/WSSConsole.csproj
+++ b/WSSConsole/WSSConsole.csproj
@@ -7,8 +7,8 @@
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{6D7F0E9F-7932-43B3-B0B7-AD5E81F31B40}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Console</RootNamespace>
-    <AssemblyName>Console</AssemblyName>
+    <RootNamespace>WSSConsole</RootNamespace>
+    <AssemblyName>WSSConsole</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Linux_Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
