--- a/EchoApplication/EchoApplication.csproj
+++ b/EchoApplication/EchoApplication.csproj
@@ -3,12 +3,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Linux_Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>10.0.0</ProductVersion>
+    <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{85A012EA-EF2B-4BC4-A08F-3D25E0D27FD3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>EchoApplication</RootNamespace>
     <AssemblyName>EchoApplication</AssemblyName>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Linux_Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
