--- a/WSSConsole/WSSConsole.csproj
+++ b/WSSConsole/WSSConsole.csproj
@@ -3,12 +3,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Linux_Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>10.0.0</ProductVersion>
+    <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{6D7F0E9F-7932-43B3-B0B7-AD5E81F31B40}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>WSSConsole</RootNamespace>
     <AssemblyName>WSSConsole</AssemblyName>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Linux_Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -58,6 +59,14 @@
     <ProjectReference Include="..\WebSocketServer\WebSocketServer.csproj">
       <Project>{4F54FD91-329C-4600-94AA-5F7C901ADC65}</Project>
       <Name>WebSocketServer</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\EchoApplication\EchoApplication.csproj">
+      <Project>{85A012EA-EF2B-4BC4-A08F-3D25E0D27FD3}</Project>
+      <Name>EchoApplication</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\JsonRpc\JsonRpc.csproj">
+      <Project>{266AB4B3-B5EE-4462-826B-A88804BEA399}</Project>
+      <Name>JsonRpc</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
