--- a/WebSocketServer/WebSocketServer.csproj
+++ b/WebSocketServer/WebSocketServer.csproj
@@ -3,12 +3,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Linux_Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>10.0.0</ProductVersion>
+    <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{4F54FD91-329C-4600-94AA-5F7C901ADC65}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>WebSocketServer</RootNamespace>
     <AssemblyName>WebSocketServer</AssemblyName>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Linux_Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
